<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>com.ntak</groupId>
    <artifactId>pearl-zip-archive-zip4j-testFX</artifactId>
    <version>0.0.5.0</version>
    <modelVersion>4.0.0</modelVersion>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <pearl-zip.version>0.0.4.1</pearl-zip.version>
        <log4j.version>2.17.0</log4j.version>
        <junit.version>5.5.2</junit.version>
        <junit.jupiter.version>1.5.2</junit.jupiter.version>
        <junit-platform-runner.version>1.5.2</junit-platform-runner.version>
        <mockito-core.version>3.9.0</mockito-core.version>
        <zip4j.version>2.10.0</zip4j.version>
        <javafx.version>17.0.1</javafx.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.deploy.skip>true</maven.deploy.skip>
        <deploy.settings.loc>${project.basedir}/scripts/settings.properties</deploy.settings.loc>
        <pearlzip.zip4j.next.version>${project.version}</pearlzip.zip4j.next.version>
        <pearl-zip-ui.test.version>0.0.4.1</pearl-zip-ui.test.version>
        <testfx.version>4.0.16-alpha</testfx.version>
        <openjfx-monocle.version>jdk-12.0.1+2</openjfx-monocle.version>
        <eventbus.version>3.2.0</eventbus.version>
        <nsmenufx.version>3.0.2</nsmenufx.version>
        <lang>en</lang>
        <country>GB</country>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>pearl-zip-archive-zip4j</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>pearl-zip-ui</artifactId>
            <version>${pearl-zip.version}</version>
            <type>test-jar</type>
        </dependency>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>ntak-testfx-util</artifactId>
            <version>${pearl-zip-ui.test.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>openjfx-monocle</artifactId>
            <version>${openjfx-monocle.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>de.jangassen</groupId>
            <artifactId>nsmenufx</artifactId>
            <version>${nsmenufx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.greenrobot</groupId>
            <artifactId>eventbus</artifactId>
            <version>${eventbus.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-commons</artifactId>
            <version>${junit.jupiter.version}</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>increment-version</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.google.code.maven-replacer-plugin</groupId>
                        <artifactId>replacer</artifactId>
                        <version>1.5.3</version>
                        <executions>
                            <execution>
                                <id>version-set</id>
                                <phase>validate</phase>
                                <goals>
                                    <goal>replace</goal>
                                </goals>
                                <configuration>
                                    <includes>
                                        <include>${project.basedir}/pom.xml</include>
                                    </includes>
                                    <replacements>
                                        <replacement>
                                            <xpath>/project/version</xpath>
                                            <token>${project.version}</token>
                                            <value>${pearlzip.zip4j.next.version}</value>
                                        </replacement>
                                    </replacements>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <includes>
                        <include>**/*TestSuite.class</include>
                    </includes>
                    <argLine>
                        --add-opens com.ntak.pearlzip.ui/modena-dark=pearl.zip.archive.zip4j
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>